package ar.edu.utn.frba.dds.macowins;

public abstract class Estado {
  public double cacular(double precioPrenda) {
    return 0;
  }
}
