package ar.edu.utn.frba.dds.macowins;

public abstract class FormaDePago {
  public double calcular(Double subTotal) {
    return 0;
  }
}
