package ar.edu.utn.frba.dds.macowins;

public class Nuevo extends Estado{

  @Override
  public double cacular(double precioPrenda) {
    return precioPrenda;
  }
}
