package ar.edu.utn.frba.dds.macowins;

public enum TipoPrenda {
  SACO, PANTALON, CAMISA
}
